force-app/main/default/objects/Contact/fields/Average_Gain_Loss_Percent__c.field-meta.xml
<CustomField>
    <fullName>Average_Gain_Loss_Percent__c</fullName>
    <formula>Total_Gain_Loss_Percentage__c / Total_Fund_Count__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Average Gain/Loss Percent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>