force-app/main/default/objects/Contact/fields/Risk_Factor_Preference__c.field-meta.xml
<CustomField>
    <fullName>Risk_Factor_Preference__c</fullName>
    <label>Risk Factor Preference</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>