force-app/main/default/objects/Contact/fields/Total_Current_Value__c.field-meta.xml
<CustomField>
    <fullName>Total_Current_Value__c</fullName>
    <label>Total Current Value</label>
    <summarizedField>Portfolio__c.Current_Value__c</summarizedField>
    <summaryForeignKey>Portfolio__c.User_Contact__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>