force-app/main/default/objects/Contact/fields/Total_Fund_Count__c.field-meta.xml
<CustomField>
    <fullName>Total_Fund_Count__c</fullName>
    <label>Total Fund Count</label>
    <summaryForeignKey>Portfolio__c.User_Contact__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>