force-app/main/default/objects/Contact/fields/Total_Gain_Loss__c.field-meta.xml
<CustomField>
    <fullName>Total_Gain_Loss__c</fullName>
    <formula>Total_Current_Value__c - Total_Invested_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Gain/Loss</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>