force-app/main/default/objects/Contact/fields/Total_Gain_Loss_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Total_Gain_Loss_Percentage__c</fullName>
    <label>Total Gain/Loss Percentage</label>
    <summarizedField>Portfolio__c.Gain_Loss_Percentage__c</summarizedField>
    <summaryForeignKey>Portfolio__c.User_Contact__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>