force-app/main/default/objects/Contact/fields/Total_Invested_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Invested_Amount__c</fullName>
    <label>Total Invested Amount</label>
    <summarizedField>Portfolio__c.Amount_Invested__c</summarizedField>
    <summaryForeignKey>Portfolio__c.User_Contact__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>